Updated description and included it in the index.html page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>Introduction to Backbone</h1>
+
+        <p>A presentation on the basics of Backbone.js and how they can be used</p>
     </body>
 </html>
