--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title>Introduction to Backbone</title>
+
+        <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+
+        <script src="js/jquery.js" type="text/javascript"></script>
+        <script src="js/underscore.js" type="text/javascript"></script>
+        <script src="js/backbone.js" type="text/javascript"></script>
+        <script src="js/bootstrap.js" type="text/javascript"></script>
+
     </head>
     <body>
+
         <h1>Introduction to Backbone</h1>
 
-        <p>A presentation on the basics of Backbone.js and how they can be used</p>
     </body>
 </html>
