--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
 
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 
-        <script src="js/jquery.js" type="text/javascript"></script>
-        <script src="js/underscore.js" type="text/javascript"></script>
-        <script src="js/backbone.js" type="text/javascript"></script>
-        <script src="js/bootstrap.js" type="text/javascript"></script>
+        <script src="js/libs/jquery.js" type="text/javascript"></script>
+        <script src="js/libs/underscore.js" type="text/javascript"></script>
+        <script src="js/libs/backbone.js" type="text/javascript"></script>
+        <script src="js/libs/bootstrap.js" type="text/javascript"></script>
+
+        <script src="js/models.js" type="text/javascript"></script>
+        <script src="js/collections.js" type="text/javascript"></script>
+        <script src="js/views.js" type="text/javascript"></script>
+        <script src="js/application.js" type="text/javascript"></script>
 
     </head>
     <body>
 
         <h1>Introduction to Backbone</h1>
+
+        <script type="text/javascript">
+            // Do stuff
+        </script>
 
     </body>
 </html>
