--- a/index.html
+++ b/index.html
@@ -11,18 +11,40 @@
         <script src="js/libs/backbone.js" type="text/javascript"></script>
         <script src="js/libs/bootstrap.js" type="text/javascript"></script>
 
+    </head>
+    <body>
+
+        <div class="container">
+
+            <h1>Introduction to Backbone</h1>
+
+            <ul id="slides">
+            </ul>
+            <script type="text/html" id="slide-template">
+                <h3><%= title %></h3>
+                <p><%= content %>
+            </script>
+
+        </div>
+
         <script src="js/models.js" type="text/javascript"></script>
         <script src="js/collections.js" type="text/javascript"></script>
         <script src="js/views.js" type="text/javascript"></script>
         <script src="js/application.js" type="text/javascript"></script>
 
-    </head>
-    <body>
-
-        <h1>Introduction to Backbone</h1>
-
         <script type="text/javascript">
-            // Do stuff
+
+        // Create a collection of slides
+        app.collections.slides = new Collections.Slides([
+            { title: 'Slide One', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' },
+            { title: 'Slide Two', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' },
+            { title: 'Slide Three', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' },
+            { title: 'Slide Four', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' }
+        ]);
+
+        app.views.slides = new Views.Slides({ el: '#slides', collection: app.collections.slides });
+        app.views.slides.render();
+
         </script>
 
     </body>
