Reworked rendering of slides collection
When rendering the whole slide collection you can use renderAll and
when rendering a single slide you can use renderOne. This way we don't
repeat code to render a standalone slide and when rendering a
collection.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         ]);
 
         app.views.slides = new Views.Slides({ el: '#slides', collection: app.collections.slides });
-        app.views.slides.render();
+        app.views.slides.renderAll();
 
         </script>
 
