--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Introduction to Backbone</title>
 
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
+        <link href="css/application.css" rel="stylesheet" type="text/css">
 
         <script src="js/libs/jquery.js" type="text/javascript"></script>
         <script src="js/libs/underscore.js" type="text/javascript"></script>
@@ -21,26 +23,22 @@
             <ul id="slides">
             </ul>
             <script type="text/html" id="slide-template">
-                <h3><%= title %></h3>
-                <p><%= content %>
+                <div class="view">
+                    <h3><%= title %></h3>
+                    <p><%= content %></p>
+                </div>
+                <div class="edit">
+                    <p><input type="text" value="<%= title %>"></p>
+                    <p><textarea><%= content %></textarea></p>
+                    <button class="done btn">Done</button>
+                </div>
             </script>
 
-            <form id="slide-form" method="post" action="#">
-
-                <h3>Add another slide</h3>
-
-                <p>
-                    <label for="title">Title</label>
-                    <input id="title" type="text" name="title" placeholder="Untitled Slide">
-                </p>
-
-                <p>
-                    <label for="title">Content</label>
-                    <textarea id="content" placeholder="Lorem ipsum ..." resizable></textarea>
-                </p>
-
-                <button id="save" class="btn">Save</button>
-
+            <form id="add-slide" method="post" action="#">
+                <p><label for="title">Title</label><input id="title" type="text" name="title" placeholder="Untitled Slide"></p>
+                <p><label for="title">Content</label><textarea id="content" placeholder="Lorem ipsum ..."></textarea></p>
+                <button id="save" class="btn btn-primary">Save</button>
+                <button id="save" class="btn">Cancel</button>
             </form>
 
         </div>
@@ -63,7 +61,9 @@
         app.views.slides = new Views.Slides({ el: '#slides', collection: app.collections.slides });
         app.views.slides.renderAll();
 
-        app.views.slideForm = new Views.SlideForm({ el: '#slide-form' })
+        app.views.addSlideForm = new Views.AddSlideForm({ el: '#add-slide' })
+
+        app.views.application = new Views.Application({ el: 'body' });
 
         </script>
 
