Added a stats div ready for some useful information

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <button id="save" class="btn">Cancel</button>
             </form>
 
+            <div id="statistics">
+            </div>
+
         </div>
 
         <script src="js/models.js" type="text/javascript"></script>
