--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
                 </div>
             </script>
 
-            <form id="add-slide" method="post" action="#">
-                <p><label for="title">Title</label><input id="title" type="text" name="title" placeholder="Untitled Slide"></p>
-                <p><label for="title">Content</label><textarea id="content" placeholder="Lorem ipsum ..."></textarea></p>
-                <button id="save" class="btn btn-primary">Save</button>
-                <button id="save" class="btn">Cancel</button>
-            </form>
+            <div id="add-slide">
+                <button class="add-slide btn">Add a slide</button>
+                <form method="post" action="#">
+                    <p><label for="title">Title</label><input id="title" type="text" name="title" placeholder="Untitled Slide"></p>
+                    <p><label for="title">Content</label><textarea id="content" placeholder="Lorem ipsum ..."></textarea></p>
+                    <button type="submit" class="add btn btn-primary">Add</button>
+                    <button type="button" class="cancel btn">Cancel</button>
+                </form>
+            </div>
 
             <div id="statistics">
             </div>
