--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>impress.js | presentation tool based on the power of CSS3 transforms and transitions in modern browsers | by Bartek Szopka @bartaz</title>
+    <title>Introduction to Backbone.js &mdash; Tom Loudon</title>
     
     <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
     <meta name="author" content="Bartek Szopka" />
@@ -101,7 +101,10 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
+        <h1>An introduction to</h1>
+        <p><img src="img/backbone.png" alt="Backbone.js"></p>
+        <p><a href="http://www.backbonejs.org/"></a></p>
+<!--        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>-->
     </div>
 
     <!--
