--- a/example.html
+++ b/example.html
@@ -2,12 +2,15 @@
 <html>
     <head>
 
+        <meta charset="utf-8">
+
         <title>Introduction to Backbone</title>
 
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
         <link href="css/application.css" rel="stylesheet" type="text/css">
 
+        <!-- Include jquery.js and underscore.js before backbone.js -->
         <script src="js/libs/jquery.js" type="text/javascript"></script>
         <script src="js/libs/underscore.js" type="text/javascript"></script>
         <script src="js/libs/backbone.js" type="text/javascript"></script>
@@ -22,6 +25,8 @@
 
                 <div id="stats">
                 </div>
+
+                <!-- Underscore template for the stats -->
                 <script type="text/html" id="stats-template">
                     <i class="icon-th-large"></i> <%= count %> slides
                 </script>
@@ -29,6 +34,15 @@
 
             <ul id="slides">
             </ul>
+            <!--
+            Template for displaying a slide
+
+            <div class="view"> shows the viewing state
+            <div class="edit"> shows the form (editing) state
+
+            When clicking on a slide to edit it a state class of 'editing'
+            is applied. CSS takes care of showing the correct state
+            -->
             <script type="text/html" id="slide-template">
                 <div class="view">
                     <h2><%= title %></h2>
@@ -41,6 +55,7 @@
                 </div>
             </script>
 
+            <!-- For for adding new slides -->
             <form id="add-slide" class="slide" method="post" action="#">
                 <p><input id="title" type="text" name="title" placeholder="Untitled Slide"></p>
                 <p><textarea id="content" placeholder="Lorem ipsum ..."></textarea></p>
@@ -49,6 +64,7 @@
 
         </div>
 
+        <!-- Include the different parts of the application -->
         <script src="js/models.js" type="text/javascript"></script>
         <script src="js/collections.js" type="text/javascript"></script>
         <script src="js/views.js" type="text/javascript"></script>
@@ -56,19 +72,47 @@
 
         <script type="text/javascript">
 
-        // Create a collection of slides
+        /**
+         * Create a slides collection instance.
+         * Populate it with some example slide data
+         */
         app.collections.slides = new Collections.Slides([
-            { title: 'Slide One', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' },
-            { title: 'Slide Two', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' },
-            { title: 'Slide Three', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' },
-            { title: 'Slide Four', content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.' }
+            {
+                title: 'Slide One',
+                content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
+            },
+            {
+                title: 'Slide Two',
+                content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
+            },
+            {
+                title: 'Slide Three',
+                content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
+            },
+            {
+                title: 'Slide Four',
+                content: 'Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'
+            }
         ]);
 
-        app.views.slides = new Views.Slides({ el: '#slides', collection: app.collections.slides });
+        /**
+         * Create an instance of the view for displaying the slides collection.
+         * Pass it the element (#slides) into which we'll write out the templates.
+         * Also pass in the slides collection so that the view can write out it's
+         * contents
+         */
+        app.views.slides = new Views.Slides({
+            el: '#slides',
+            collection: app.collections.slides
+        });
+
+        // Render the slides collection
         app.views.slides.renderAll();
 
+        // Create an instance of the add a slide form view
         app.views.addSlideForm = new Views.AddSlideForm({ el: '#add-slide' })
 
+        // Create an instance of the Application view
         app.views.application = new Views.Application({ el: 'body' });
 
         </script>
