Updated example heading

--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
         <div class="container">
 
             <div class="page-header">
-                <h1>Slideshow One</h1>
+                <h1>Example Slideshow</h1>
 
                 <div id="stats">
                 </div>
